Fixed ANOTHER bug with portfolio shadows not appearing correctly

--- a/styles/portfolio_styles.css
+++ b/styles/portfolio_styles.css
@@ -55,6 +55,10 @@ div div, nav {
     padding-bottom: 0.2em;
 }
 
+.portfolio-unit p.portfolio-link {
+    margin-bottom: 0.2em;
+}
+
 .portfolio-unit p {
     border: 0.2em solid darkblue;
     border-radius: 7px;
