--- a/styles/links_styles.css
+++ b/styles/links_styles.css
@@ -44,15 +44,21 @@ a img:hover { /* When hovering over an image that works as a link, make it "ligh
 }
 
 /* Navigation Pseudo-Classes */
-#navbar p:hover {
+#navbar a:hover {
     background-color: rgb(199, 221, 255);
-    color: black;
     font-weight: bold;
     box-shadow: 0.05em 0.05em 0.05em rgb(64, 64, 64);
 }
 
-#navbar p:active {
-    color:white;
+#navbar a:hover p{
+    color: black;
+}
+
+#navbar a:link:active p, #navbar a:visited:active p {
+    color: white;
+}
+
+#navbar a:link:active, #navbar a:visited:active {
     position: relative;
     left: 0.05em;
     top: 0.05em;
@@ -66,17 +72,33 @@ a img:hover { /* When hovering over an image that works as a link, make it "ligh
 /* Footer Navigation */
 #footer-nav:hover {
     background-color: rgb(199, 221, 255);
+    font-weight: bold;
+    box-shadow: 0.05em 0.05em 0.05em rgb(64, 64, 64);
+}
+
+#footer-nav:active {
+    box-shadow: 0 0 0;
 }
 
 #footer-nav:hover h1 {
     color: black;
-    font-weight: bold;
 }
 
 #footer-nav h1:active {
-    color:white;
+    color:white !important;
     left: 0.1%;
     top: 25.1%;
+}
+
+#footer-nav h1 {
+    height: 100%;
+    width: 100;
+}
+
+footer a { 
+    width: 100%;
+    height: 100%;
+    background-color: yellow !important;
 }
 
 /* Regular Selectors */
