--- a/styles/resume_styles.css
+++ b/styles/resume_styles.css
@@ -69,22 +69,28 @@ td, th {
 
 /* Navigation Menu */
 #navbar {
-    width: 19vw;
+    width: calc(100% - 0.8em);
     max-height: 29vh;
     min-height: 29vh;
     text-align: center;
     border: 0.2em solid darkblue;
     border-radius: 7px;
-    margin: 0.2vh;
-    padding: 0;
+    margin: 0.1em;
+    padding: 0.1em;
+    display: flex;
+    flex-direction: column;
     flex: 1;
 }
 
-#navbar p {
+#navbar a {
     border: 0.3em solid darkblue;
     border-radius: 7px;
-    height: calc((29vh - 4em) / 4 + 0.225em);
-    margin: 0.2em;
-    line-height: 6vh; /* centers text vertically */
+    margin: 0.1em;
+    display: flex;
+    flex: 1 !important;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    min-height: 0;
     background-color: azure;
 }
