--- a/styles/mission_styles.css
+++ b/styles/mission_styles.css
@@ -18,6 +18,7 @@ header {
 /* Organizational Containers */
 #outer-div {
     display: flex;
+    height: 90%;
 }
 
 #left-main-div{ /* Style the left side outer container. */
