--- a/styles/index_styles.css
+++ b/styles/index_styles.css
@@ -37,18 +37,21 @@ a #footer-nav h1 {
 #greater-portrait-photo {
     flex: inherit; /* Ensure the div with portrait photo, about me, and navigation are all flexing to their maximum possible size to fill up the screen. */
     margin: 0.2vh;
+    min-width: 0;
 }
 
 #about-nav {
     display: flex;
     margin: 0.2vh;
     z-index: 1 !important;
+    min-width: 0;
 }
 
 /* Individual Bordered Containers */
 #my-story {
     background-color: azure;
-    width: 32vw;
+    /* width: 32vw; */
+    flex: 0.33;
     height: 98.6%;
     border: 0.2em solid darkblue;
     border-radius: 7px;
@@ -68,14 +71,17 @@ a #footer-nav h1 {
     background-image: url("../resources/images/main/portrait-background.jpg") !important;
     background-repeat: repeat;
     background-color: #f0ffff;
-    width: calc(100% - 0.4em - 0.4vh);
+    /* width: calc(100% - 0.4em - 0.4vh); */
+    flex: 0.33;
+    min-width: 0 !important;
 }
 
-#portrait-photo img {
+div#portrait-photo img {
     max-height: 100%;
     max-width: 100%;
-    width: auto;
-    height: auto;
+    /* width: auto;
+    height: auto; */
+    min-width: 0 !important;
     position: relative;
     top: 50%;
     transform: translateY(-50%); /* For centering image vertically. Cited from https://stackoverflow.com/questions/7273338/how-to-vertically-align-an-image-inside-a-div */
@@ -83,7 +89,8 @@ a #footer-nav h1 {
 }
 
 #collage {
-    width: 32vw;
+    /* width: 32vw; */
+    flex: 0.33;
     height: 98.6%;
     border: 0.2em solid darkblue;
     border-radius: 7px;
@@ -100,7 +107,7 @@ a #footer-nav h1 {
 }
 
 #about-me {
-    width: 50%;
+    flex: 0.55;
     height: 39.4vh;
     padding: 0.1em 0.2em;
     border: 0.2em solid darkblue;
@@ -108,6 +115,7 @@ a #footer-nav h1 {
     margin: 0.2vh;
     background-color: azure;
     z-index: 1 !important;
+    min-width: 0;
 }
 
 /* Styling Instagram Embed */
@@ -117,15 +125,17 @@ a #footer-nav h1 {
 
 /* Navigation Menu */
 #navbar {
-    width: 16vw;
+    /* width: 16vw; */
+    flex: 0.45;
     height: 39.4vh;
     border: 0.2em solid darkblue;
     border-radius: 7px;
     margin: 0.2vh;
     display: flex;
     flex-direction: column;
-    flex: 1;
+    /* flex: 1; */
     padding: 0.1em;
+    min-width: 0;
 }
 
 #navbar a {
