--- a/styles/mission_styles.css
+++ b/styles/mission_styles.css
@@ -10,13 +10,14 @@ header {
     font-size: 0.7em;
     text-align: center;
     border: 0.3em solid darkblue;
-    border-radius: 7px;
     margin: 0.2em;
+    border-radius: 7px;
     background-color: azure;
 }
 
 /* Organizational Containers */
 #outer-div {
+    max-width: 100vw !important;
     display: flex;
     height: 90%;
 }
@@ -24,8 +25,10 @@ header {
 #left-main-div{ /* Style the left side outer container. */
     border: 0.2em solid darkblue;
     border-radius: 7px;
-    width: 90%;
-    height: 89vh;
+    /* width: 50%; */
+    min-width: 0;
+    flex: 0.6;
+    height: calc(89vh - 1em);
     display: flex;
     flex-direction: column;
     margin: 0.2em;
@@ -34,8 +37,10 @@ header {
 #right-main-div { /* Styling for the large right side container. */
     border: 0.2em solid darkblue;
     border-radius: 7px;
-    width: 50%;
-    height: 89vh;
+    /* width: 50%; */
+    flex: 0.4;
+    min-width: 0;
+    height: calc(89vh - 1em);
     display: flex;
     flex-direction: column;
     margin: 0.2em;
@@ -76,8 +81,8 @@ ol li {
 }
 
 /* Individual Bordered Containers */
-#ethical-bg {
-    height: 100%;
+div div#ethical-bg {
+    height: calc(100% - 0.8em);
 }
 
 div div#video-embed iframe {
@@ -88,6 +93,7 @@ div div#video-embed iframe {
 
 div div#video-embed {
     text-align: center;
+    height: calc(100% - 0.8em);
 }
 
 div div#video-embed p {
@@ -134,4 +140,14 @@ div div div#acm-code, div div div#sysadmin-book { /* Ensure references div alway
     margin: 0.1em;
     font-size: 16px;
     background-color: azure;
+}
+
+/* Mobile Media Query */
+/* Cited from https://www.w3schools.com/css/css_rwd_mediaqueries.asp. This will change the maximum size of the outer container on mobile devices. */
+@media only screen and (max-width: 460px) { 
+    #outer-div {
+        max-width: calc(100vw - 0.9rem);
+        flex: 1;
+        margin-right: 0.2em !important;
+    }
 }
