--- a/styles/general_styles.css
+++ b/styles/general_styles.css
@@ -8,7 +8,8 @@
 /* Generic HTML Styling */
 html {
     font-family: Bitter, sans-serif;
-    height: 100vh;
+    height: 100%;
+    width: 100%;
     font-size: 16px;
 }
 
