--- a/styles/general_styles.css
+++ b/styles/general_styles.css
@@ -32,18 +32,18 @@ h4 {
 
 /* Custom Class Selectors */
 .hidden {
-    font-size: 0;
-    border: 0;
-    padding: 0;
-    margin: 0;
-    line-height: 0;
-    width: 0;
-    min-width: 0;
-    max-width: 0;
-    height: 0;
-    min-height: 0;
-    max-height: 0;
-    opacity: 0;
+    font-size: 0 !important;
+    border: 0 !important;
+    padding: 0 !important;
+    margin: 0 !important;
+    line-height: 0 !important;
+    width: 0 !important;
+    min-width: 0 !important;
+    max-width: 0 !important;
+    height: 0 !important;
+    min-height: 0 !important;
+    max-height: 0 !important;
+    opacity: 0 !important;
 }
 
 .bold {
