--- a/styles/mission_styles.css
+++ b/styles/mission_styles.css
@@ -16,10 +16,16 @@ header {
 }
 
 /* Organizational Containers */
+body {
+    height: 90%;
+}
+
 #outer-div {
     max-width: 100vw !important;
     display: flex;
-    height: 90%;
+    height: 100%;
+    overflow: hidden;
+    margin-bottom: 0;
 }
 
 #left-main-div{ /* Style the left side outer container. */
