--- a/styles/links_styles.css
+++ b/styles/links_styles.css
@@ -96,7 +96,7 @@ a img:hover { /* When hovering over an image that works as a link, make it "ligh
 
 #footer-nav h1 {
     height: 100%;
-    width: 100;
+    width: 100%;
 }
 
 footer a { 
